# dusdoc-api

./: .pre-commit-config.yaml  pyproject.toml  ruff.toml
dusdoc_api/: __init__.py  __main__.py
dusdoc_api/app/: __init__.py  quartconf.py
dusdoc_api/app/domain/: __init__.py
dusdoc_api/app/domain/admin/: __init__.py
dusdoc_api/app/domain/admin/namespaces/: __init__.py  docs.py  example.json  forms.py  funcionarios.py  system.py
dusdoc_api/app/domain/admin/routes/: __init__.py  auth.py
dusdoc_api/app/domain/admin/routes/forms/: __init__.py  funcionario.py
dusdoc_api/app/domain/admin/routes/funcionario/: __init__.py  admissional.py  cadastro.py
dusdoc_api/app/domain/funcionarios/: __init__.py
dusdoc_api/app/domain/funcionarios/namespaces/: docs.py  forms.py  funcionarios.py
dusdoc_api/app/domain/funcionarios/routes/: __init__.py  auth.py
dusdoc_api/app/namespaces/: __init__.py  forms.py  system.py
dusdoc_api/app/routes/: __init__.py  auth.py
dusdoc_api/app/routes/forms/: __init__.py  admissional.py
dusdoc_api/decorators/: jwt.py
dusdoc_api/examples/: example_solicitados.json  funcionarios.json
dusdoc_api/jinja/: password.jinja
dusdoc_api/models/: __init__.py  forms.py  users.py
dusdoc_api/models/admissional/: __init__.py
dusdoc_api/models/users/: __init__.py  admin.py  funcionarios.py
dusdoc_api/socket/: __init__.py
dusdoc_api/socket/namespaces/: __init__.py
dusdoc_api/socket_dusdoc/: __init__.py
dusdoc_api/socket_dusdoc/namespaces/: __init__.py
dusdoc_api/socketio/: __init__.py
dusdoc_api/wrappers/: jwt.py
(+2 files in other folders)
