[project]
name = "dusdoc-api"
version = "0.1.0"
description = ""
authors = [{ name = "Robotz213", email = "nicholas@robotz.dev" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "quart (>=0.20.0,<0.21.0)",
    "quart-jwt-extended (>=0.1.0,<0.2.0)",
    "python-socketio (>=5.13.0,<6.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "hypercorn (>=0.17.3,<0.18.0)",
    "quart-cors (>=0.8.0,<0.9.0)",
    "quart-socketio @ git+https://github.com/Robotz213/Quart-SocketIO.git",
    "trio (>=0.30.0,<0.31.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "quart-flask-patch (>=0.3.0,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
]

[tool.poetry]
packages = [{ include = "dusdoc_api", from = "." }]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
